@@ -7,7 +7,10 @@ package me.lokka30.levelledmobs.rules;
 import me.lokka30.levelledmobs.LevelledMobs;
 import me.lokka30.levelledmobs.LivingEntityInterface;
 import me.lokka30.levelledmobs.managers.ExternalCompatibilityManager;
-import me.lokka30.levelledmobs.misc.*;
+import me.lokka30.levelledmobs.misc.CachedModalList;
+import me.lokka30.levelledmobs.misc.DebugType;
+import me.lokka30.levelledmobs.misc.LivingEntityWrapper;
+import me.lokka30.levelledmobs.misc.Utils;
 import me.lokka30.levelledmobs.rules.strategies.LevellingStrategy;
 import org.bukkit.World;
 import org.bukkit.entity.Player;
@@ -15,7 +18,15 @@ import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.EnumMap;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.SortedMap;
+import java.util.TreeMap;
 import java.util.concurrent.ThreadLocalRandom;
 
 /**
@@ -29,12 +40,10 @@ public class RulesManager {
     public RulesManager(final LevelledMobs main) {
         this.main = main;
         this.rulesInEffect = new TreeMap<>();
-        this.levelNumbersWithBiasMapCache = new TreeMap<>();
         this.biomeGroupMappings = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
     }
 
     private final LevelledMobs main;
-    private final Map<String, LevelNumbersWithBias> levelNumbersWithBiasMapCache;
     @NotNull
     public final SortedMap<Integer, List<RuleInfo>> rulesInEffect;
     @NotNull
@@ -56,13 +65,18 @@ public class RulesManager {
         return result;
     }
 
-    @Nullable
-    public String getRule_NBT_Data(final @NotNull LivingEntityWrapper lmEntity){
-        String nbtData = null;
+    @NotNull
+    public List<String> getRule_NBT_Data(final @NotNull LivingEntityWrapper lmEntity){
+        final List<String> nbtData = new LinkedList<>();
 
         for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()){
-            if (ruleInfo.mobNBT_Data != null)
-                nbtData = ruleInfo.mobNBT_Data;
+            if (ruleInfo.mobNBT_Data != null) {
+                final MergeableStringList nbt = ruleInfo.mobNBT_Data;
+                if (!nbt.doMerge)
+                    nbtData.clear();
+
+                nbtData.addAll(nbt.items);
+            }
         }
 
         return nbtData;
@@ -77,25 +91,6 @@ public class RulesManager {
         }
 
         return result;
-    }
-
-    @Nullable
-    public LevelNumbersWithBias getRule_LowerMobLevelBiasFactor(@NotNull final LivingEntityWrapper lmEntity, final int minLevel, final int maxLevel){
-        Integer lowerMobLevelBiasFactor = null;
-
-        for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()){
-            if (ruleInfo.lowerMobLevelBiasFactor != null) lowerMobLevelBiasFactor = ruleInfo.lowerMobLevelBiasFactor;
-        }
-
-        if (lowerMobLevelBiasFactor == null) return null;
-
-        final String checkName = String.format("%s-%s-%s", minLevel, maxLevel, lowerMobLevelBiasFactor);
-        if (this.levelNumbersWithBiasMapCache.containsKey(checkName))
-            return this.levelNumbersWithBiasMapCache.get(checkName);
-
-        LevelNumbersWithBias levelNumbersWithBias = new LevelNumbersWithBias(minLevel, maxLevel, lowerMobLevelBiasFactor);
-        this.levelNumbersWithBiasMapCache.put(checkName, levelNumbersWithBias);
-        return levelNumbersWithBias;
     }
 
     public int getRule_MaxRandomVariance(@NotNull final LivingEntityWrapper lmEntity){
@@ -144,7 +139,7 @@ public class RulesManager {
         }
 
         if (lmInterface instanceof LivingEntityWrapper) {
-            LivingEntityWrapper lmEntity = (LivingEntityWrapper) lmInterface;
+            final LivingEntityWrapper lmEntity = (LivingEntityWrapper) lmInterface;
             return (
                     allowedEntitiesList == null ||
                             !babyMobsInheritAdultSetting && lmEntity.isBabyMob() && Utils.isLivingEntityInModalList(allowedEntitiesList, lmEntity, true)) ||
@@ -187,34 +182,15 @@ public class RulesManager {
 
     @NotNull
     public Map<ExternalCompatibilityManager.ExternalCompatibility, Boolean> getRule_ExternalCompatibility(@NotNull final LivingEntityWrapper lmEntity){
-        final Map<ExternalCompatibilityManager.ExternalCompatibility, Boolean> result = new TreeMap<>();
+        final Map<ExternalCompatibilityManager.ExternalCompatibility, Boolean> result = new EnumMap<>(ExternalCompatibilityManager.ExternalCompatibility.class);
 
         for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()){
             if (ruleInfo.enabledExtCompats != null) {
-                for (final ExternalCompatibilityManager.ExternalCompatibility compatibility : ruleInfo.enabledExtCompats.keySet())
-                    result.put(compatibility, ruleInfo.enabledExtCompats.get(compatibility));
+                result.putAll(ruleInfo.enabledExtCompats);
             }
         }
 
         return result;
-    }
-
-    public boolean isMythicMobsCompatibilityEnabled(){
-        for (final List<RuleInfo> rules : this.rulesInEffect.values()){
-            if (rules == null) continue;
-
-            for (final RuleInfo ruleInfo : rules){
-                if (ruleInfo.ruleIsEnabled &&
-                        ruleInfo.enabledExtCompats != null &&
-                        ruleInfo.enabledExtCompats.containsKey(ExternalCompatibilityManager.ExternalCompatibility.MYTHIC_MOBS) &&
-                        ruleInfo.enabledExtCompats.get(ExternalCompatibilityManager.ExternalCompatibility.MYTHIC_MOBS)
-                ){
-                    return true;
-                }
-            }
-        }
-
-        return false;
     }
 
     public boolean isPlayerLevellingEnabled(){
@@ -295,7 +271,7 @@ public class RulesManager {
     }
 
     public int getRule_MobMaxLevel(@NotNull final LivingEntityInterface lmInterface){
-        int maxLevel = 10;
+        int maxLevel = 0;
 
         for (final RuleInfo ruleInfo : lmInterface.getApplicableRules()) {
             if (ruleInfo.restrictions_MaxLevel != null) maxLevel = ruleInfo.restrictions_MaxLevel;
@@ -304,6 +280,7 @@ public class RulesManager {
         return maxLevel;
     }
 
+    @Nullable
     public PlayerLevellingOptions getRule_PlayerLevellingOptions(@NotNull final LivingEntityWrapper lmEntity){
         PlayerLevellingOptions levellingOptions = null;
 
@@ -322,6 +299,22 @@ public class RulesManager {
                 nametag = "disabled".equalsIgnoreCase(ruleInfo.nametag) ?
                         "" : ruleInfo.nametag;
             }
+        }
+
+        return nametag;
+    }
+
+    @Nullable
+    public String getRule_Nametag_Placeholder(@NotNull final LivingEntityWrapper lmEntity){
+        String nametag = null;
+        final boolean isLevelled = lmEntity.isLevelled();
+
+        for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()) {
+            if (ruleInfo == null) continue;
+            final String nametagRule = isLevelled ?
+                    ruleInfo.nametag_Placeholder_Levelled : ruleInfo.nametag_Placeholder_Unlevelled;
+            if (nametagRule != null)
+                nametag = nametagRule;
         }
 
         return nametag;
@@ -358,6 +351,7 @@ public class RulesManager {
         List<NametagVisibilityEnum> result = null;
 
         for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()){
+            if (ruleInfo == null) continue;
             if (ruleInfo.nametagVisibilityEnum != null)
                 result = ruleInfo.nametagVisibilityEnum;
         }
@@ -391,7 +385,7 @@ public class RulesManager {
         if (coloringInfo == null) return  null;
 
         final int mobLevel = lmEntity.getMobLevel();
-        for (TieredColoringInfo info : coloringInfo){
+        for (final TieredColoringInfo info : coloringInfo){
             if (info.isDefault) tieredText = info.text;
             if (mobLevel >= info.minLevel && mobLevel <= info.maxLevel){
                 tieredText = info.text;
@@ -422,7 +416,7 @@ public class RulesManager {
             return lmEntity.getOverridenEntityName();
 
         for (final RuleInfo ruleInfo : lmEntity.getApplicableRules()){
-            boolean doMerge = ruleInfo.mergeEntityNameOverrides != null && ruleInfo.mergeEntityNameOverrides;
+            final boolean doMerge = ruleInfo.mergeEntityNameOverrides != null && ruleInfo.mergeEntityNameOverrides;
             if (ruleInfo.entityNameOverrides != null){
                 if (entityNameOverrides != null && doMerge)
                     entityNameOverrides.putAll(ruleInfo.entityNameOverrides);
@@ -470,6 +464,7 @@ public class RulesManager {
         return result;
     }
 
+    @Nullable
     private LevelTierMatching getEntityNameOverrideLevel(final Map<String, List<LevelTierMatching>> entityNameOverrides_Level, final LivingEntityWrapper lmEntity){
         if (entityNameOverrides_Level == null) return null;
 
@@ -497,8 +492,7 @@ public class RulesManager {
     public ApplicableRulesResult getApplicableRules(final LivingEntityInterface lmInterface){
         final ApplicableRulesResult applicableRules = new ApplicableRulesResult();
 
-        for (final int rulePriority : rulesInEffect.keySet()) {
-            final List<RuleInfo> rules = rulesInEffect.get(rulePriority);
+        for (final List<RuleInfo> rules : rulesInEffect.values()) {
             for (final RuleInfo ruleInfo : rules) {
 
                 if (!ruleInfo.ruleIsEnabled) continue;
@@ -575,7 +569,7 @@ public class RulesManager {
 
         if (ri.conditions_MM_Names != null){
             String mm_Name = ExternalCompatibilityManager.getMythicMobInternalName(lmEntity);
-            if ("".equals(mm_Name)) mm_Name = "(none)";
+            if (mm_Name.isEmpty()) mm_Name = "(none)";
 
             if (!ri.conditions_MM_Names.isEnabledInList(mm_Name, lmEntity)) {
                 Utils.debugLog(main, DebugType.DENIED_RULE_MYTHIC_MOBS_INTERNAL_NAME, String.format("&b%s&7, mob: &b%s&7, mm_name: &b%s&7",
@@ -590,6 +584,17 @@ public class RulesManager {
 
             if (!ri.conditions_SpawnerNames.isEnabledInList(checkName, lmEntity)) {
                 Utils.debugLog(main, DebugType.DENIED_RULE_SPAWN_REASON, String.format("&b%s&7, mob: &b%s&7, spawner: &b%s&7",
+                        ri.getRuleName(), lmEntity.getNameIfBaby(), checkName));
+                return false;
+            }
+        }
+
+        if (ri.conditions_SpawnegEggNames != null) {
+            String checkName = lmEntity.getSourceSpawnEggName();
+            if (checkName == null) checkName = "(none)";
+
+            if (!ri.conditions_SpawnegEggNames.isEnabledInList(checkName, lmEntity)) {
+                Utils.debugLog(main, DebugType.DENIED_RULE_SPAWN_REASON, String.format("&b%s&7, mob: &b%s&7, spawn_egg: &b%s&7",
                         ri.getRuleName(), lmEntity.getNameIfBaby(), checkName));
                 return false;
             }
@@ -643,12 +648,12 @@ public class RulesManager {
         if (ri.conditions_WGRegions != null){
             boolean isInList = false;
             final List<String> wgRegions = ExternalCompatibilityManager.getWGRegionsAtLocation(lmInterface);
-            if (wgRegions != null) {
-                for (final String regionName : wgRegions) {
-                    if (ri.conditions_WGRegions.isEnabledInList(regionName, null)) {
-                        isInList = true;
-                        break;
-                    }
+            if (wgRegions.isEmpty()) wgRegions.add("(none)");
+
+            for (final String regionName : wgRegions) {
+                if (ri.conditions_WGRegions.isEnabledInList(regionName, null)) {
+                    isInList = true;
+                    break;
                 }
             }
 
@@ -705,13 +710,13 @@ public class RulesManager {
                 // find out if this entity previously lost or won the chance previously and use that result if present
                 final Map<String, Boolean> prevChanceResults = lmEntity.getPrevChanceRuleResults();
                 if (prevChanceResults != null && prevChanceResults.containsKey(ri.getRuleName())){
-                    boolean prevResult = prevChanceResults.get(ri.getRuleName());
+                    final boolean prevResult = prevChanceResults.get(ri.getRuleName());
                     return new RuleCheckResult(prevResult);
                 }
             }
 
-            final double chanceRole = ThreadLocalRandom.current().nextDouble();
-            if (chanceRole < (1.0 - ri.conditions_Chance)){
+            final float chanceRole = (float) ThreadLocalRandom.current().nextInt(0, 100001) * 0.00001F;
+            if (chanceRole < (1.0F - ri.conditions_Chance)){
                 Utils.debugLog(main, DebugType.DENIED_RULE_CHANCE, String.format("&b%s&7, mob: &b%s&7, chance: &b%s&7, chance role: &b%s&7",
                         ri.getRuleName(), lmInterface.getTypeName(), ri.conditions_Chance, Utils.round(chanceRole, 4)));
                 return new RuleCheckResult(false, false);
@@ -746,36 +751,36 @@ public class RulesManager {
     public void buildBiomeGroupMappings(final Map<String, Set<String>> customBiomeGroups){
         this.biomeGroupMappings.clear();
 
-        this.biomeGroupMappings.put("SNOWY_BIOMES", Arrays.asList("SNOWY_TUNDRA", "ICE_SPIKES", "SNOWY_TAIGA", "SNOWY_TAIGA_MOUNTAINS",
+        this.biomeGroupMappings.put("SNOWY_BIOMES", List.of("SNOWY_TUNDRA", "ICE_SPIKES", "SNOWY_TAIGA", "SNOWY_TAIGA_MOUNTAINS",
                 "SNOWY_TAIGA_HILLS", "FROZEN_RIVER", "SNOWY_BEACH", "SNOWY_MOUNTAINS"));
 
-        this.biomeGroupMappings.put("COLD_BIOMES", Arrays.asList("MOUNTAINS", "GRAVELLY_MOUNTAINS", "MODIFIED_GRAVELLY_MOUNTAINS",
+        this.biomeGroupMappings.put("COLD_BIOMES", List.of("MOUNTAINS", "GRAVELLY_MOUNTAINS", "MODIFIED_GRAVELLY_MOUNTAINS",
                 "WOODED_MOUNTAINS", "TAIGA", "TAIGA_MOUNTAINS", "TAIGA_HILLS", "GIANT_TREE_TAIGA", "GIANT_TREE_TAIGA_HILLS",
                 "GIANT_SPRUCE_TAIGA", "GIANT_SPRUCE_TAIGA_HILLS", "STONE_SHORE"));
 
-        this.biomeGroupMappings.put("TEMPERATE_BIOMES", Arrays.asList("PLAINS", "SUNFLOWER_PLAINS", "FOREST", "FLOWER_FOREST",
+        this.biomeGroupMappings.put("TEMPERATE_BIOMES", List.of("PLAINS", "SUNFLOWER_PLAINS", "FOREST", "FLOWER_FOREST",
                 "BIRCH_FOREST", "BIRCH_FOREST_HILLS", "TALL_BIRCH_FOREST", "TALL_BIRCH_HILLS", "DARK_FOREST", "DARK_FOREST_HILLS",
                 "SWAMP", "SWAMP_HILLS", "JUNGLE", "MODIFIED_JUNGLE", "JUNGLE_HILLS", "MODIFIED_JUNGLE_EDGE", "BAMBOO_JUNGLE",
                 "BAMBOO_JUNGLE_HILLS", "RIVER", "BEACH", "MUSHROOM_FIELDS", "MUSHROOM_FIELD_SHORE", "WOODED_HILLS"));
 
-        this.biomeGroupMappings.put("DRY_BIOMES", Arrays.asList("DESERT", "DESERT_LAKES", "DESERT_HILLS", "SAVANNA",
+        this.biomeGroupMappings.put("DRY_BIOMES", List.of("DESERT", "DESERT_LAKES", "DESERT_HILLS", "SAVANNA",
                 "SHATTERED_SAVANNA", "SHATTERED_SAVANNA_PLATEAU", "BADLANDS", "ERODED_BADLANDS", "WOODED_BADLANDS_PLATEAU",
                 "BADLANDS_PLATEAU", "SAVANNA_PLATEAU", "MODIFIED_BADLANDS_PLATEAU", "MODIFIED_WOODED_BADLANDS_PLATEAU", "MODIFIED_SAVANNA_PLATEAU"));
 
-        this.biomeGroupMappings.put("OCEAN_BIOMES", Arrays.asList("WARM_OCEAN", "DEEP_WARM_OCEAN", "LUKEWARM_OCEAN", "DEEP_LUKEWARM_OCEAN", "OCEAN",
+        this.biomeGroupMappings.put("OCEAN_BIOMES", List.of("WARM_OCEAN", "DEEP_WARM_OCEAN", "LUKEWARM_OCEAN", "DEEP_LUKEWARM_OCEAN", "OCEAN",
                 "DEEP_OCEAN", "COLD_OCEAN", "DEEP_COLD_OCEAN", "FROZEN_OCEAN", "DEEP_FROZEN_OCEAN"));
 
-        this.biomeGroupMappings.put("NETHER_BIOMES", Arrays.asList("NETHER_WASTES", "CRIMSON_FOREST", "WARPED_FOREST", "SOUL_SAND_VALLEY", "BASALT_DELTAS"));
+        this.biomeGroupMappings.put("NETHER_BIOMES", List.of("NETHER_WASTES", "CRIMSON_FOREST", "WARPED_FOREST", "SOUL_SAND_VALLEY", "BASALT_DELTAS"));
 
-        this.biomeGroupMappings.put("END_BIOMES", Arrays.asList("THE_END", "SMALL_END_ISLANDS", "END_MIDLANDS", "END_HIGHLANDS", "END_BARRENS"));
+        this.biomeGroupMappings.put("END_BIOMES", List.of("THE_END", "SMALL_END_ISLANDS", "END_MIDLANDS", "END_HIGHLANDS", "END_BARRENS"));
 
         if (customBiomeGroups == null) return;
 
-        for (final String groupName : customBiomeGroups.keySet()){
-            final Set<String> groupMembers = customBiomeGroups.get(groupName);
+        for (final Map.Entry<String, Set<String>> groupName : customBiomeGroups.entrySet()){
+            final Set<String> groupMembers = groupName.getValue();
             final List<String> newList = new ArrayList<>(groupMembers.size());
             newList.addAll(groupMembers);
-            this.biomeGroupMappings.put(groupName, newList);
+            this.biomeGroupMappings.put(groupName.getKey(), newList);
         }
     }
 }
